--- a/index.html
+++ b/index.html
@@ -119,21 +119,21 @@
                 <img src="https://via.placeholder.com/300x150" alt="Project 1">
                 <h2>DevOps Tracker</h2>
                 <p>Track my journey through DevOps tools and practices.</p>
-                <a href="https://gauravamarnani.github.io/devops-tracker">View Project</a>
+                <a href="https://tracker.gauravamarnani.site/devops_progress.html">View Project</a>
             </div>
             <!-- Project 2 -->
             <div class="project-card">
                 <img src="https://via.placeholder.com/300x150" alt="Project 2">
                 <h2>German Language Tracker</h2>
                 <p>Follow my progress as I learn the German language.</p>
-                <a href="https://gauravamarnani.github.io/german-tracker">View Project</a>
+                <a href="https://tracker.gauravamarnani.site/tcs_progress.html">View Project</a>
             </div>
             <!-- Project 3 -->
             <div class="project-card">
                 <img src="https://via.placeholder.com/300x150" alt="Project 3">
                 <h2>TCS Exam Tracker</h2>
                 <p>Monitor my preparation for the TCS National Qualifier Test.</p>
-                <a href="https://gauravamarnani.github.io/tcs-tracker">View Project</a>
+                <a href="https://tracker.gauravamarnani.site/german_progress.html">View Project</a>
             </div>
         </div>
     </div>
